Deployed after Automation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Mustafa Bootcamp website
-    
+    Deployed on surge and automate CI/CD using Github Actions    
 </body>
 </html>
