Assignment 1 sucessfully Done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Deployed on surge and automate CI/CD using Github Actions    
+    Deployed on surge and automate CI/CD using Github Actions(ALL THE ISSUES ARE RESOLVED)
 </body>
 </html>
